# 01-trees

./: .gitignore  Makefile  README.md  cse230-trees.cabal  stack.yaml
platform/linux/CSE230/: Shift.hs
platform/mac/CSE230/: Shift.hs
src/: Main.hs
src/CSE230/: Directory.hs  Doc.hs  Graphics.hs  List.hs  Shapes.hs
test/: Common.hs  Test.hs
